--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,73 +1,52 @@
-user www-data; // utilisateur sous lequel le processus principal de Nginx fonctionnera. (svt defini sur un utilisateur specifique pour des raisons de secu et permission)
-worker_processes  1; // definit le nombre de processus de travail nginx -> depend de la configuration materielle et du trafic du serveur.
-error_log  /var/log/nginx/error.log; // indique ou les msgs d erreur seront enregistres
-pid        /var/run/nginx.pid; // specifie le chemin du fichier PID ou le PID du processus principal de Nginx sera enregistre => svt utilise pour arreter ou redemarrer le serveur Nginx
+user www-data; # utilisateur sous lequel le processus principal de Nginx fonctionnera. (svt defini sur un utilisateur specifique pour des raisons de secu et permission)
+worker_processes  1; # definit le nombre de processus de travail nginx -> depend de la configuration materielle et du trafic du serveur.
+error_log  /var/log/nginx/error.log; # indique ou les msgs d erreur seront enregistres
+pid        /var/run/nginx.pid; # specifie le chemin du fichier PID ou le PID du processus principal de Nginx sera enregistre => svt utilise pour arreter ou redemarrer le serveur Nginx
 
 #specifie les parametres relatifs aux evenements et aux connexions
 events {
 	#worker_connections  1024;
 } 
 
-server {
+http {
+    server {
     #indique a Nginx d'ecouter les requetes sur le port 443 (port par defaut pour les connexion https)
     #indique =mt que le serveur doit utiliser SSL/TLS pour secu la com
-    listen  443 ssl;
+        listen  443 ssl;
     #idem pour ipv6 
-    listen  [::]: 443 ssl;
-    server_name     mvautrot.42.fr;
+        listen  [::]:443 ssl;
     
     #specifient le chemin vers le certificat SSL et la cle privee associee pouir le serveur SSL/TLS
-    ssl_certificate /etc/nginx/ssl/mvautrot.crt;
-    ssl_certificate_key /etc/nginx/ssl/mvautrot.key;
-
-    #specifie les protocoles SSL/TLS autorises pour les connexions securisees
-    ssl_protocols   TLSv1.2 TLSv1.3;
+        ssl_certificate /etc/nginx/ssl/inception.crt;
+        ssl_certificate_key /etc/nginx/ssl/inception.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
 
     #indique le repertoire racine pour les fichiers servis apr ce serveur Nginx = endroit ou Nginx chercher les fichiers a servir en fonction des requetes HTTP recues
-    root    /var/www/html;
+        server_name     localhost;
+        root    /var/www/html;
+        index index.php index.html index.htm index.nginx-debian.html;
+        #localhost
+        #server_name     mvautrot.42.fr;
 
     #specifie l'ordre des fichiers index a rechercher lorsqu'une requete est fqite pour le repertoire racine
-    index   index.php index.html;
+        index   index.php index.html index.htm;
 
  #   access_log  /var/log/nginx/localhost.access.log;
 
 ## Default location
-    location / {
-       try_files $uri $uri/ =404;
-    }
-
-## Images and static content is treated different
-##    location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|xml)$ {
-  ##    access_log        off;
-    ##  expires           30d;
-     ## root /var/www;
-    ##}
+        location / {
+            try_files $uri $uri/ =404;
+        }
 
 ## Parse all .php file in the /var/www directory
     #definit un bloc de config qui s'applique aux fichiers PHP
-    location ~ .php$ {
-        #directive utilisee pour diviser l'URL en 2 partie : la premiere est le nom du fichier PHP et la seconde le chemin d'information
-        fastcgi_split_path_info ^(.+\.php)(.*)$; 
-        #indique a Nginx de transmettre les requetes PHP a un serveur FastCGI nomme wordpress et ecourant le port 9000
-        fastcgi_pass   wordpress:9000;
-        #specifie le fichier index a utiliser lorsque le nom du fihcier n'est pas specifie dans l'URL
-        fastcgi_index  index.php;
-        #inclut un ensembe de parametres FastCGI predefinis
-        include fastcgi_params;
+        location ~ \.php$ {
+            include fastcgi_params;
+            include snippets/fastcgi-php.conf;
+         ######   fastcgi_pass   wordpress:9000;
+
         #indique au moteur PHP quel fichier doit etre execute; construite en utilisant le chemin du doc root et le nom du script
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        #fastcgi_param  QUERY_STRING     $query_string;
-        #fastcgi_param  REQUEST_METHOD   $request_method;
-        #fastcgi_param  CONTENT_TYPE     $content_type;
-        #fastcgi_param  CONTENT_LENGTH   $content_length;
-        #fastcgi_intercept_errors        on;
-        #fastcgi_ignore_client_abort     off;
-        #fastcgi_connect_timeout 60;
-        #fastcgi_send_timeout 180;
-        #fastcgi_read_timeout 180;
-        #fastcgi_buffer_size 128k;
-        #fastcgi_buffers 4 256k;
-        #fastcgi_busy_buffers_size 256k;
-        #fastcgi_temp_file_write_size 256k;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        }
     }
 }
