--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bullseye
 
-RUN apt update && apt upgrade -y && apt install -y nginx
+RUN apt update -y && apt upgrade -y && apt install -y nginx
 
 RUN apt install nano -y
 
