--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -8,18 +8,31 @@ RUN apt-get install -y \
     php-mysql \
     mariadb-client
 
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
+RUN mkdir -p /run/php/
 
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
+#RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
 
-RUN	chown -R root:root /var/www/wordpress
+#RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
+
+#RUN	chown -R root:root /var/www/wordpress
 
 COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
-
 RUN chmod 755 /etc/php/7.4/fpm/pool.d/www.conf
+
 
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 
 RUN chmod +x wp-cli.phar
 
 RUN mv wp-cli.phar /usr/local/bin/wp
+
+RUN mkdir -p /var/www/html
+RUN chown -R www-data:www-data /var/www/html
+RUN chmod 755 /var/www/html
+
+COPY tools/conf_wordpress.sh /usr/local/bin/conf_wordpress.sh
+RUN chmod 755 /usr/local/bin/conf_wordpress.sh
+
+EXPOSE 9000
+
+CMD ["sh", "/usr/local/bin/conf_wordpress.sh"]
