--- a/srcs/.env
+++ b/srcs/.env
@@ -2,3 +2,12 @@ SQL_DATABASE="database"
 SQL_USER="ML"
 SQL_PASSWORD="password"
 SQL_ROOT_PASSWORD="rootpassword"
+
+WP_URL="test" 
+WP_TITLE="testTitle" 
+WP_ADMIN="ml" 
+WP_ADMIN_PASSWORD="123" 
+WP_ADMIN_EMAIL="ml@gmail.com" 
+WP_USER="lm" 
+WP_USER_EMAIL="lm@gmail.com" 
+WP_USER_PASSWORD="321"
