--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,25 @@
 version: '3'
 
+networks:
+  inception:
+    driver: bridge  
+
+volumes:
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+    type: none
+    o: bind
+    device: 'home/user/data/wordpress'
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+    type: none
+    o: bind
+    device: 'home/usr/data/mariadb'
+
 services:
   nginx:
     image: nginx
