--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -43,7 +43,7 @@ http {
         location ~ \.php$ {
             include fastcgi_params;
             include snippets/fastcgi-php.conf;
-         ######   fastcgi_pass   wordpress:9000;
+            fastcgi_pass   wordpress:9000;
 
         #indique au moteur PHP quel fichier doit etre execute; construite en utilisant le chemin du doc root et le nom du script
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
