--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,14 @@
-SQL_DATABASE="database"
-SQL_USER="ML"
-SQL_PASSWORD="password"
-SQL_ROOT_PASSWORD="rootpassword"
+SQL_DATABASE=database
+SQL_HOST=mariadb
+SQL_USER=ml_db
+SQL_PASSWORD=password
+SQL_ROOT_PASSWORD=rootpassword
 
-WP_URL="test" 
-WP_TITLE="testTitle" 
-WP_ADMIN="ml" 
-WP_ADMIN_PASSWORD="123" 
-WP_ADMIN_EMAIL="ml@gmail.com" 
-WP_USER="lm" 
-WP_USER_EMAIL="lm@gmail.com" 
-WP_USER_PASSWORD="321"
+WP_URL=mvautrot.42.fr 
+WP_TITLE=testTitle 
+WP_ADMIN=ml 
+WP_ADMIN_PASSWORD=123 
+WP_ADMIN_EMAIL=ml@gmail.com 
+WP_USER=lm 
+WP_USER_EMAIL=lm@gmail.com
+WP_USER_PASSWORD=321
