--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -22,11 +22,11 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
 
     #indique le repertoire racine pour les fichiers servis apr ce serveur Nginx = endroit ou Nginx chercher les fichiers a servir en fonction des requetes HTTP recues
-        server_name     localhost;
+        #server_name     localhost;
+        server_name     mvautrot.42.fr;
         root    /var/www/html;
         index index.php index.html index.htm index.nginx-debian.html;
         #localhost
-        #server_name     mvautrot.42.fr;
 
     #specifie l'ordre des fichiers index a rechercher lorsqu'une requete est fqite pour le repertoire racine
         index   index.php index.html index.htm;
