--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
-SQL_DATABASE=database
+SQL_DBNAME=coucou
 SQL_HOST=mariadb
 SQL_USER=ml_db
-SQL_PASSWORD=password
-SQL_ROOT_PASSWORD=rootpassword
+SQL_PASSWORD=unmdp123
+SQL_ROOT_PASSWORD=rootmdp123
 
 WP_URL=mvautrot.42.fr 
 WP_TITLE=testTitle 
