--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -29,7 +29,7 @@ http {
         #localhost
 
     #specifie l'ordre des fichiers index a rechercher lorsqu'une requete est fqite pour le repertoire racine
-        index   index.php index.html index.htm;
+       # index   index.php index.html index.htm;
 
  #   access_log  /var/log/nginx/localhost.access.log;
 
