--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,7 +13,6 @@ http {
     #indique a Nginx d'ecouter les requetes sur le port 443 (port par defaut pour les connexion https)
     #indique =mt que le serveur doit utiliser SSL/TLS pour secu la com
         listen  443 ssl;
-    #idem pour ipv6 
         listen  [::]:443 ssl;
     
     #specifient le chemin vers le certificat SSL et la cle privee associee pouir le serveur SSL/TLS
@@ -35,7 +34,7 @@ http {
 
 ## Default location
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri/ =404;
         }
 
 ## Parse all .php file in the /var/www directory
