--- a/srcs/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp/conf/vsftpd.conf
@@ -8,7 +8,24 @@
 # Please read the vsftpd.conf.5 manual page to get a full idea of vsftpd's
 # capabilities.
 #
-# Allow anonymous FTP? (Beware - allowed by default if you comment this out).
+#
+# Run standalone?  vsftpd can run either from an inetd or as a standalone
+# daemon started from an initscript.
+listen=YES
+listen_port=21
+listen_address=0.0.0.0
+seccomp_sandbox=NO
+
+#
+# This directive enables listening on IPv6 sockets. By default, listening
+# on the IPv6 "any" address (::) will accept connections from both IPv6
+# and IPv4 clients. It is not necessary to listen on *both* IPv4 and IPv6
+# sockets. If you want that (perhaps because you want to listen on specific
+# addresses) then you must run two copies of vsftpd with two configuration
+# files.
+#listen_ipv6=YES
+#
+# Allow anonymous FTP? (Disabled by default).
 anonymous_enable=NO
 #
 # Uncomment this to allow local users to log in.
@@ -19,7 +36,7 @@ write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
-#local_umask=022
+# local_umask=022
 #
 # Uncomment this to allow the anonymous FTP user to upload files. This only
 # has an effect if the above global write enable is activated. Also, you will
@@ -34,6 +51,12 @@ write_enable=YES
 # go into a certain directory.
 dirmessage_enable=YES
 #
+# If enabled, vsftpd will display directory listings with the time
+# in  your  local  time  zone.  The default is to display GMT. The
+# times returned by the MDTM FTP command are also affected by this
+# option.
+use_localtime=YES
+#
 # Activate logging of uploads/downloads.
 xferlog_enable=YES
 #
@@ -43,7 +66,7 @@ connect_from_port_20=YES
 # If you want, you can arrange for uploaded anonymous files to be owned by
 # a different user. Note! Using "root" for uploaded files is not
 # recommended!
-#chown_uploads=YES
+# chown_uploads=YES
 #chown_username=whoever
 #
 # You may override where the log file goes if you like. The default is shown
@@ -81,13 +104,17 @@ connect_from_port_20=YES
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-ftpd_banner=Welcome to FTP server on $USER
-#
+ftpd_banner= Welcome to FTP server !
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
 #deny_email_enable=YES
 # (default follows)
 #banned_email_file=/etc/vsftpd.banned_emails
+#
+# You may restrict local users to their home directories.  See the FAQ for
+# the possible risks in this before using chroot_local_user or
+# chroot_list_enable below.
+chroot_local_user=YES
 #
 # You may specify an explicit list of local users to chroot() to their home
 # directory. If chroot_local_user is YES, then this list becomes a list of
@@ -95,11 +122,10 @@ ftpd_banner=Welcome to FTP server on $USER
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-chroot_local_user=YES
+# chroot_local_user=YES
 allow_writeable_chroot=YES
-user_sub_token=$USER
 local_root=/var/www/html
-
+user_sub_token=$USER
 #chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd.chroot_list
@@ -110,24 +136,37 @@ local_root=/var/www/html
 # the presence of the "-R" option, so there is a strong case for enabling it.
 #ls_recurse_enable=YES
 #
-# When "listen" directive is enabled, vsftpd runs in standalone mode and
-# listens on IPv4 sockets. This directive cannot be used in conjunction
-# with the listen_ipv6 directive.
-listen=YES
-listen_port=21
-listen_address=0.0.0.0
-seccomp_sandbox=NO
+# Customization
+#
+# Some of vsftpd's settings don't fit the filesystem layout by
+# default.
+#
+# This option should be the name of a directory which is empty.  Also, the
+# directory should not be writable by the ftp user. This directory is used
+# as a secure chroot() jail at times vsftpd does not require filesystem
+# access.
+# secure_chroot_dir=/var/run/vsftpd/empty
+#
+# This string is the name of the PAM service vsftpd will use.
+# pam_service_name=vsftpd
+#
+# This option specifies the location of the RSA certificate to use for SSL
+# encrypted connections.
+# rsa_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
+# rsa_private_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
+# ssl_enable=NO
 
 #
-# This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
-# sockets, you must run two copies of vsftpd with two configuration files.
-# Make sure, that one of the listen options is commented !!
-#listen_ipv6=YES
+# Uncomment this to indicate that vsftpd use a utf8 filesystem.
+#utf8_filesystem=YES
 
+# passive mode configuration
 pasv_enable=YES
-pasv_min_port=21100 ??
-pasv_max_port=21110 ?? 
+pasv_min_port=21100
+pasv_max_port=21110
 
+
+# user list configuration
 userlist_enable=YES
 userlist_file=/etc/vsftpd.userlist
 userlist_deny=NO
