--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -33,18 +33,41 @@ http {
  #   access_log  /var/log/nginx/localhost.access.log;
 
 ## Default location
+
+
         location / {
-            try_files $uri/ =404;
+            try_files $uri $uri/ =404;
         }
 
-## Parse all .php file in the /var/www directory
-    #definit un bloc de config qui s'applique aux fichiers PHP
+        location /adminer {
+            alias /var/www/adminer;
+            try_files $uri $uri/ /adminer/index.php?$args;
+            proxy_pass http://adminer:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_intercept_errors on;
+            proxy_redirect off;
+            error_page 404 = @adminer;
+        }
+
+
+        location @adminer {
+            proxy_pass http://adminer:9000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    ## Parse all .php file in the /var/www directory
+        #definit un bloc de config qui s'applique aux fichiers PHP
         location ~ \.php$ {
             include fastcgi_params;
             include snippets/fastcgi-php.conf;
             fastcgi_pass   wordpress:9000;
 
-        #indique au moteur PHP quel fichier doit etre execute; construite en utilisant le chemin du doc root et le nom du script
+            #indique au moteur PHP quel fichier doit etre execute; construite en utilisant le chemin du doc root et le nom du script
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         }
     }
