--- a/srcs/.env
+++ b/srcs/.env
@@ -15,3 +15,7 @@ WP_USER_PASSWORD=321
 
 FTP_USER=ml_ftp
 FTP_PASSWORD=456
+
+#PORTAINER_ADMIN_USER=marielaure
+#PORTAINER_ADMIN_PASSWORD=ra4aelle42**
+PORTAINER_HOME=/var/lib/portainer
