--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -26,6 +26,13 @@ volumes:
       type: none
       o: bind
       device: '/home/ml/data/website'
+  portainer:  # Définition du volume pour Portainer
+    name: portainer
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: '/home/ml/data/portainer'
 
 services:
   nginx:
@@ -132,4 +139,22 @@ services:
       - wordpress:/var/www/html
     env_file: 
       - .env
+    restart: always
+
+  portainer:
+    container_name: portainer
+    build:
+      context: requirements/bonus/portainer
+    networks:
+      - inception
+    ports:
+      - "9443:9443"
+    networks: 
+      - inception
+    depends_on:
+      - wordpress
+    env_file:
+      - .env
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
