--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,73 +1,48 @@
-user www-data; # utilisateur sous lequel le processus principal de Nginx fonctionnera. (svt defini sur un utilisateur specifique pour des raisons de secu et permission)
-worker_processes  1; # definit le nombre de processus de travail nginx -> depend de la configuration materielle et du trafic du serveur.
-error_log  /var/log/nginx/error.log; # indique ou les msgs d erreur seront enregistres
-pid        /var/run/nginx.pid; # specifie le chemin du fichier PID ou le PID du processus principal de Nginx sera enregistre => svt utilise pour arreter ou redemarrer le serveur Nginx
+user www-data; #Sets the user under which Nginx will run.
+worker_processes  1; #Defines the number of worker processes. 
+error_log  /var/log/nginx/error.log; #Specifies the file where Nginx will log errors.
+pid        /var/run/nginx.pid; #Specifies the file where the process ID of the main process will be stored
 
-#specifie les parametres relatifs aux evenements et aux connexions
+#specifies parameters relating to events and connections
 events {
 	#worker_connections  1024;
 } 
 
+#This block contains the main configuration for the HTTP server.
 http {
     server {
-    #indique a Nginx d'ecouter les requetes sur le port 443 (port par defaut pour les connexion https)
-    #indique =mt que le serveur doit utiliser SSL/TLS pour secu la com
+
+        #Configures Nginx to listen on port 443 for SSL/TLS connections.
         listen  443 ssl;
         listen  [::]:443 ssl;
     
-    #specifient le chemin vers le certificat SSL et la cle privee associee pouir le serveur SSL/TLS
+        # tells Nginx where the SSL/TLS certificates are located
         ssl_certificate /etc/nginx/ssl/inception.crt;
         ssl_certificate_key /etc/nginx/ssl/inception.key;
         ssl_protocols TLSv1.2 TLSv1.3;
 
-    #indique le repertoire racine pour les fichiers servis apr ce serveur Nginx = endroit ou Nginx chercher les fichiers a servir en fonction des requetes HTTP recues
-        #server_name     localhost;
+        # This directive sets the domain name or IP address that should match this Nginx server block
         server_name     mvautrot.42.fr;
+        # This directive sets the root directory for requests that match this server block.
         root    /var/www/html;
+        # This directive defines the order in which Nginx should try to find an index file (the default page) when a request is made to the server.
         index index.php index.html index.htm index.nginx-debian.html;
-        #localhost
 
-    #specifie l'ordre des fichiers index a rechercher lorsqu'une requete est fqite pour le repertoire racine
-       # index   index.php index.html index.htm;
-
- #   access_log  /var/log/nginx/localhost.access.log;
 
 ## Default location
-
-
         location / {
+            #Handles requests for the root directory and tries to find the requested file or returns a 404 error if not found.
             try_files $uri $uri/ =404;
         }
 
-        location /adminer {
-            alias /var/www/adminer;
-            try_files $uri $uri/ /adminer/index.php?$args;
-            proxy_pass http://adminer:9000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_intercept_errors on;
-            proxy_redirect off;
-            error_page 404 = @adminer;
-        }
-
-
-        location @adminer {
-            proxy_pass http://adminer:9000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
     ## Parse all .php file in the /var/www directory
-        #definit un bloc de config qui s'applique aux fichiers PHP
+        #defines a config block that applies to PHP files
         location ~ \.php$ {
             include fastcgi_params;
             include snippets/fastcgi-php.conf;
-            fastcgi_pass   wordpress:9000;
+            fastcgi_pass   wordpress:9000; #tells Nginx to pass PHP requests to the PHP-FPM service, which is listening on port 9000 on the wordpress container.
 
-            #indique au moteur PHP quel fichier doit etre execute; construite en utilisant le chemin du doc root et le nom du script
+            #tells the PHP engine which file should be executed;
             fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         }
     }
