--- a/srcs/.env
+++ b/srcs/.env
@@ -1,17 +1,17 @@
 SQL_DBNAME=coucou
 SQL_HOST=mariadb
 SQL_USER=ml_db
-SQL_PASSWORD=unmdp123
-SQL_ROOT_PASSWORD=rootmdp123
+SQL_PASSWORD=satxie123
+SQL_ROOT_PASSWORD=satxie321
 
 WP_URL=mvautrot.42.fr 
-WP_TITLE=testTitle 
+WP_TITLE=MyFirstBlog
 WP_ADMIN=ml 
-WP_ADMIN_PASSWORD=123 
+WP_ADMIN_PASSWORD=satxie123* 
 WP_ADMIN_EMAIL=ml@gmail.com 
 WP_USER=lm 
 WP_USER_EMAIL=lm@gmail.com
-WP_USER_PASSWORD=321
+WP_USER_PASSWORD=satxie321*
 
 FTP_USER=ml_ftp
 FTP_PASSWORD=456
